[package]
name = "chinglish"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "fs-exists",
  "fs-read-file",
  "notification-all",
  "fs-write-file",
  "system-tray",
  "path-all",
  "shell-open",
  "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["blocking"] }

[dependencies.tauri-plugin-sql]
git = "https://gitee.com/jqiue/plugins-workspace.git"
branch = "v1"
features = ["sqlite"]                                 # or "postgres", or "mysql"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
